extended themes to lyrics options

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Font
 SING_OPTIONS_LYRICS_EFFECT=Efecte
 SING_OPTIONS_LYRICS_NOTELINES=Pentagrama
 
+SING_OPTIONS_LYRICS_ALPHA=Transparència
+SING_OPTIONS_LYRICS_LINE=Línia
+SING_OPTIONS_LYRICS_PROPERTY=Propietat
+SING_OPTIONS_LYRICS_POSITION=Posició
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Canta
+OPTION_VALUE_TOP=Superior
+OPTION_VALUE_BOTTOM=Inferior
+OPTION_VALUE_OTHER=Altres
+OPTION_VALUE_FILL=Omplir
+OPTION_VALUE_OUTLINE=Esquema
+
 OPTION_VALUE_PLAIN=Estilitzat
 OPTION_VALUE_OLINE1=Amb una vora fina
 OPTION_VALUE_OLINE2=Amb una vora gruixuda
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Vores
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Desenfocament gaussià
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Igualat
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erosionar
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparència
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Línia
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Propietat
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Color
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Vermell
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Verd
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Blau
-
-JUKEBOX_SONGOPTIONS_LYRIC=Opcions líriques
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Posició
-
-OPTION_VALUE_TO_SING=Canta
-OPTION_VALUE_TOP=Superior
-OPTION_VALUE_BOTTOM=Inferior
-OPTION_VALUE_OTHER=Altres
-OPTION_VALUE_FILL=Omplir
-OPTION_VALUE_OUTLINE=Esquema
-
 
 SING_LEGEND_SELECT=Seleccionar
 SING_LEGEND_NAVIGATE=Navegar
@@ -604,6 +607,7 @@ C_BOTTOM=Inferior
 
 C_CLASSIC=Clàssic
 C_CHALLENGE=Desafiament
+C_COLOR=Color
 C_COLOR_BEIGE=Beix
 C_COLOR_BLACK=Negre
 C_COLOR_BLUE=Blau
