--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Font
 SING_OPTIONS_LYRICS_EFFECT=Efekt
 SING_OPTIONS_LYRICS_NOTELINES=Noodiread
 
+SING_OPTIONS_LYRICS_ALPHA=Läbipaistvus
+SING_OPTIONS_LYRICS_LINE=Rida
+SING_OPTIONS_LYRICS_PROPERTY=Vara
+SING_OPTIONS_LYRICS_POSITION=Positsioon
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Laula
+OPTION_VALUE_TOP=Üles
+OPTION_VALUE_BOTTOM=Alumine
+OPTION_VALUE_OTHER=Muu
+OPTION_VALUE_FILL=Täida
+OPTION_VALUE_OUTLINE=Kontuur
+
 OPTION_VALUE_PLAIN=Muudetud
 OPTION_VALUE_OLINE1=Peenikese äärega
 OPTION_VALUE_OLINE2=Paksu äärega
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Ääred
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Hägusus
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Võrdsustatud
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Lõhenema
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Läbipaistvus
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Rida
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Vara
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Värv
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Punane
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Roheline
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Sinine
-
-JUKEBOX_SONGOPTIONS_LYRIC=Laulusõnade valikud
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Positsioon
-
-OPTION_VALUE_TO_SING=Laula
-OPTION_VALUE_TOP=Üles
-OPTION_VALUE_BOTTOM=Alumine
-OPTION_VALUE_OTHER=Muu
-OPTION_VALUE_FILL=Täida
-OPTION_VALUE_OUTLINE=Kontuur
-
 
 SING_LEGEND_SELECT=Vali
 SING_LEGEND_NAVIGATE=Navigeeri
@@ -604,6 +607,7 @@ C_BOTTOM=Alumine
 
 C_CLASSIC=Klassikaline
 C_CHALLENGE=Väljakutse
+C_COLOR=Värv
 C_COLOR_BEIGE=Beež
 C_COLOR_BLACK=Must
 C_COLOR_BLUE=Sinine
