--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Font
 SING_OPTIONS_LYRICS_EFFECT=Effect
 SING_OPTIONS_LYRICS_NOTELINES=Staves
 
+SING_OPTIONS_LYRICS_ALPHA=Alpha
+SING_OPTIONS_LYRICS_LINE=Line
+SING_OPTIONS_LYRICS_PROPERTY=Property
+SING_OPTIONS_LYRIC_POSITION=Position
+
+SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Sing
+OPTION_VALUE_TOP=Top
+OPTION_VALUE_BOTTOM=Bottom
+OPTION_VALUE_OTHER=Other
+OPTION_VALUE_FILL=Fill
+OPTION_VALUE_OUTLINE=Outline
+
 OPTION_VALUE_PLAIN=Stylized
 OPTION_VALUE_OLINE1=With thin edge
 OPTION_VALUE_OLINE2=With thick edge
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Edges
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparency
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Color
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Red
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Green
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Blue
-
-JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-
-OPTION_VALUE_TO_SING=Sing
-OPTION_VALUE_TOP=Top
-OPTION_VALUE_BOTTOM=Bottom
-OPTION_VALUE_OTHER=Other
-OPTION_VALUE_FILL=Fill
-OPTION_VALUE_OUTLINE=Outline
-
 
 SING_LEGEND_SELECT=Select
 SING_LEGEND_NAVIGATE=Navigate
@@ -604,6 +607,7 @@ C_BOTTOM=Bottom
 
 C_CLASSIC=Classic
 C_CHALLENGE=Challenge
+C_COLOR=Color
 C_COLOR_BEIGE=Beige
 C_COLOR_BLACK=Black
 C_COLOR_BLUE=Blue
