--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Tipografía
 SING_OPTIONS_LYRICS_EFFECT=Efecto
 SING_OPTIONS_LYRICS_NOTELINES=Pentagrama
 
+SING_OPTIONS_LYRICS_ALPHA=Transparencia
+SING_OPTIONS_LYRICS_LINE=Línea
+SING_OPTIONS_LYRICS_PROPERTY=Personalizado
+SING_OPTIONS_LYRICS_POSITION=Posición
+
+SING_OPTIONS_LYRICS_MODE_DESC=Alterna entre clásico o jukebox para personalizar las letras
+SING_OPTIONS_LYRICS_STAVES_DESC=Muestra líneas horizontales en la pantalla canta
+SING_OPTIONS_LYRICS_POSITION_DESC=Sube o baja la posición de la letra
+SING_OPTIONS_LYRICS_FONT_DESC=Establece el grosor de la fuente
+SING_OPTIONS_LYRICS_EFFECT_DESC=Elige el movimiento de la letra
+SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Establece la opacidad de la letra
+SING_OPTIONS_LYRICS_LINE_DESC=Elige la línea para cambiar el color
+SING_OPTIONS_LYRICS_PROPERTY_DESC=Elige la parte de la letra que quieres personalizar
+SING_OPTIONS_LYRICS_COLOR_DESC=Cambia el color de la letra
+
+OPTION_VALUE_TO_SING=Canta
+OPTION_VALUE_TOP=Superior
+OPTION_VALUE_BOTTOM=Inferior
+OPTION_VALUE_OTHER=Otro
+OPTION_VALUE_FILL=Relleno
+OPTION_VALUE_OUTLINE=Borde
+
 OPTION_VALUE_PLAIN=Estilizada
 OPTION_VALUE_OLINE1=Con borde fino
 OPTION_VALUE_OLINE2=Con borde grueso
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Bordes
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Difuminado Gaussiano
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equilibrada
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erosión
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparencia
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Línea
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Personalizado
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Color
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Rojo
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Verde
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Azul
-
-JUKEBOX_SONGOPTIONS_LYRIC=Opciones de letra
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Posición
-
-OPTION_VALUE_TO_SING=Canta
-OPTION_VALUE_TOP=Superior
-OPTION_VALUE_BOTTOM=Inferior
-OPTION_VALUE_OTHER=Otro
-OPTION_VALUE_FILL=Relleno
-OPTION_VALUE_OUTLINE=Borde
-
 
 SING_LEGEND_SELECT=Seleccionar
 SING_LEGEND_NAVIGATE=Navegar
@@ -602,6 +605,7 @@ C_BOTTOM=Inferior
 
 C_CLASSIC=Clásico
 C_CHALLENGE=Reto
+C_COLOR=Color
 C_COLOR_BEIGE=Beis
 C_COLOR_BLACK=Negro
 C_COLOR_BLUE=Azul
