--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Caractères
 SING_OPTIONS_LYRICS_EFFECT=Effet
 SING_OPTIONS_LYRICS_NOTELINES=Barres
 
+SING_OPTIONS_LYRICS_ALPHA=Transparence
+SING_OPTIONS_LYRICS_LINE=Ligne
+SING_OPTIONS_LYRICS_PROPERTY=Propriété
+SING_OPTIONS_LYRICS_POSITION=Position
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Chantée
+OPTION_VALUE_TOP=Supérieure
+OPTION_VALUE_BOTTOM=Inférieure
+OPTION_VALUE_OTHER=Autre
+OPTION_VALUE_FILL=Rempli
+OPTION_VALUE_OUTLINE=Bord
+
 OPTION_VALUE_PLAIN=Stylisé
 OPTION_VALUE_OLINE1=Avec bord mince
 OPTION_VALUE_OLINE2=Avec bord épais
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Bords
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Flou gaussien
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Egaliser
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Couper
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparence
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Ligne
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Propriété
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Couleur
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Rouge
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Vert
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Bleu
-
-JUKEBOX_SONGOPTIONS_LYRIC=Options des paroles
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-
-OPTION_VALUE_TO_SING=Chantée
-OPTION_VALUE_TOP=Supérieure
-OPTION_VALUE_BOTTOM=Inférieure
-OPTION_VALUE_OTHER=Autre
-OPTION_VALUE_FILL=Rempli
-OPTION_VALUE_OUTLINE=Bord
-
 
 SING_LEGEND_SELECT=Valider
 SING_LEGEND_NAVIGATE=Naviguer
@@ -602,6 +605,7 @@ C_BOTTOM=Inferiéur
 
 C_CLASSIC=Classique
 C_CHALLENGE=Challenge
+C_COLOR=Couleur
 C_COLOR_BEIGE=Beige
 C_COLOR_BLACK=Noir
 C_COLOR_BLUE=Bleu acier
