--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Tipografía
 SING_OPTIONS_LYRICS_EFFECT=Efecto
 SING_OPTIONS_LYRICS_NOTELINES=Pentagrama
 
+SING_OPTIONS_LYRICS_ALPHA=Transparencia
+;TODO: SING_OPTIONS_LYRICS_LINE=Line
+;TODO: SING_OPTIONS_LYRICS_PROPERTY=Property
+;TODO: SING_OPTIONS_LYRICS_POSITION=Position
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Cantar
+OPTION_VALUE_TOP=Superior
+OPTION_VALUE_BOTTOM=Inferior
+OPTION_VALUE_OTHER=Outro
+;TODO: OPTION_VALUE_FILL=Fill
+;TODO: OPTION_VALUE_OUTLINE=Outline
+
 OPTION_VALUE_PLAIN=Sencillo
 OPTION_VALUE_OLINE1=OLine1
 OPTION_VALUE_OLINE2=OLine2
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Umbral do micro.
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparencia
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Cor
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Vermello
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Verde
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Azul
-
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-
-OPTION_VALUE_TO_SING=Cantar
-OPTION_VALUE_TOP=Superior
-OPTION_VALUE_BOTTOM=Inferior
-OPTION_VALUE_OTHER=Outro
-;TODO: OPTION_VALUE_FILL=Fill
-;TODO: OPTION_VALUE_OUTLINE=Outline
-
 
 SING_LEGEND_SELECT=Seleccionar
 SING_LEGEND_NAVIGATE=Navegar
@@ -602,6 +605,7 @@ C_BACK=Volta
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Cor
 ;TODO: C_COLOR_BEIGE=Beige
 C_COLOR_BLACK=Negro
 C_COLOR_BLUE=Azul
