--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Carattere
 SING_OPTIONS_LYRICS_EFFECT=Effetti
 SING_OPTIONS_LYRICS_NOTELINES=Pentagramma
 
+SING_OPTIONS_LYRICS_ALPHA=Trasparenza
+SING_OPTIONS_LYRICS_LINE=Linea
+SING_OPTIONS_LYRICS_PROPERTY=Proprietà
+SING_OPTIONS_LYRICS_POSITION=Posizione
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Inizia la sfida!
+OPTION_VALUE_TOP=Superiore
+OPTION_VALUE_BOTTOM=Inferiore
+OPTION_VALUE_OTHER=Altro
+OPTION_VALUE_FILL=Riempire
+OPTION_VALUE_OUTLINE=Contorno
+
 OPTION_VALUE_PLAIN=Stilizzato
 OPTION_VALUE_OLINE1=Con bordo sottile
 OPTION_VALUE_OLINE2=Con bordo grosso
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Bordi
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Sfocatura gaussiana
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalizzato
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erodere
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Trasparenza
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Linea
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Proprietà
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Colore
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Rosso
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Verde
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Blu
-
-JUKEBOX_SONGOPTIONS_LYRIC=Opzioni testo
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Posizione
-
-OPTION_VALUE_TO_SING=Inizia la sfida!
-OPTION_VALUE_TOP=Superiore
-OPTION_VALUE_BOTTOM=Inferiore
-OPTION_VALUE_OTHER=Altro
-OPTION_VALUE_FILL=Riempire
-OPTION_VALUE_OUTLINE=Contorno
-
 
 SING_LEGEND_SELECT=Seleziona
 SING_LEGEND_NAVIGATE=Naviga
@@ -602,6 +605,7 @@ C_BACK=Indietro
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Colori
 C_COLOR_BEIGE=Beige
 C_COLOR_BLACK=Black
 C_COLOR_BLUE=Blu
