--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Czcionka
 SING_OPTIONS_LYRICS_EFFECT=Efekt
 SING_OPTIONS_LYRICS_NOTELINES=Drążki
 
+SING_OPTIONS_LYRICS_ALPHA=Przezroczystość
+SING_OPTIONS_LYRICS_LINE=Linia
+SING_OPTIONS_LYRICS_PROPERTY=Właściwość
+SING_OPTIONS_LYRICS_POSITION=Pozycja
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Śpiewaj
+;TODO: OPTION_VALUE_TOP=Top
+;TODO: OPTION_VALUE_BOTTOM=Bottom
+OPTION_VALUE_OTHER=Inne
+OPTION_VALUE_FILL=Wypełnij
+OPTION_VALUE_OUTLINE=Zarys
+
 OPTION_VALUE_PLAIN=Zwykły
 OPTION_VALUE_OLINE1=OLine1
 OPTION_VALUE_OLINE2=OLine2
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Krawędzie
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Rozmycie Gaussa
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Wyrównany
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erozja
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Przezroczystość
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Linia
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Właściwość
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Kolor
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Czerwony
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Zielony
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Niebieski
-
-JUKEBOX_SONGOPTIONS_LYRIC=Opcje tekstu
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Pozycja
-
-OPTION_VALUE_TO_SING=Śpiewaj
-;TODO: OPTION_VALUE_TOP=Top
-;TODO: OPTION_VALUE_BOTTOM=Bottom
-OPTION_VALUE_OTHER=Inne
-OPTION_VALUE_FILL=Wypełnij
-OPTION_VALUE_OUTLINE=Zarys
-
 
 SING_LEGEND_SELECT=Wybierz
 SING_LEGEND_NAVIGATE=Nawiguj
@@ -602,6 +605,7 @@ C_BACK=Wstecz
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Kolor
 C_COLOR_BEIGE=Beżowy
 C_COLOR_BLACK=Czarny
 C_COLOR_BLUE=Niebieski
