--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Fonte
 SING_OPTIONS_LYRICS_EFFECT=Efeitos
 SING_OPTIONS_LYRICS_NOTELINES=Pauta
 
+SING_OPTIONS_LYRICS_ALPHA=Opacidade
+SING_OPTIONS_LYRICS_LINE=Linha
+SING_OPTIONS_LYRICS_PROPERTY=Propriedade
+SING_OPTIONS_LYRICS_POSITION=Posição
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Cantar
+;TODO: OPTION_VALUE_TOP=Top
+;TODO: OPTION_VALUE_BOTTOM=Bottom
+OPTION_VALUE_OTHER=Outra
+OPTION_VALUE_FILL=Fundo
+OPTION_VALUE_OUTLINE=Contorno
+
 OPTION_VALUE_PLAIN=Estilizado
 OPTION_VALUE_OLINE1=com borda fina
 ;TODO: OPTION_VALUE_OLINE2=With thick edge
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Arestas
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian Blur
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equilibrada
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erosão
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Opacidade
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Linha
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Propriedade
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Cor
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Vermelho
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Verde
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Azul
-
-JUKEBOX_SONGOPTIONS_LYRIC=Opções de Letra
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Posição
-
-OPTION_VALUE_TO_SING=Cantar
-;TODO: OPTION_VALUE_TOP=Top
-;TODO: OPTION_VALUE_BOTTOM=Bottom
-OPTION_VALUE_OTHER=Outra
-OPTION_VALUE_FILL=Fundo
-OPTION_VALUE_OUTLINE=Contorno
-
 
 SING_LEGEND_SELECT=Seleccionar
 SING_LEGEND_NAVIGATE=Navegar
@@ -602,6 +605,7 @@ C_BACK=Voltar
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Cor
 C_COLOR_BEIGE=Bege
 C_COLOR_BLACK=Preto
 C_COLOR_BLUE=Azul
