--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Písmo
 SING_OPTIONS_LYRICS_EFFECT=Efekt zvýraznenia
 SING_OPTIONS_LYRICS_NOTELINES=Hudobná osnova
 
+SING_OPTIONS_LYRICS_ALPHA=Priehľadnosť
+SING_OPTIONS_LYRICS_LINE=Riadok
+SING_OPTIONS_LYRICS_PROPERTY=Atribút
+SING_OPTIONS_LYRICS_POSITION=Umiestnenie
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Spev
+OPTION_VALUE_TOP=Hore
+OPTION_VALUE_BOTTOM=Dole
+OPTION_VALUE_OTHER=Ostatné
+OPTION_VALUE_FILL=Výplň
+OPTION_VALUE_OUTLINE=Obrysy
+
 OPTION_VALUE_PLAIN=Štylizované
 OPTION_VALUE_OLINE1=S tenkou hranou
 OPTION_VALUE_OLINE2=S tučnou hranou
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Rohy
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussove rozostrenie
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Ekvalizovať
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erodovať
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Priehľadnosť
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Riadok
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Atribút
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Farba
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Červená
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Zelená
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Modrá
-
-JUKEBOX_SONGOPTIONS_LYRIC=Voľby textu
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Umiestnenie
-
-OPTION_VALUE_TO_SING=Spev
-OPTION_VALUE_TOP=Hore
-OPTION_VALUE_BOTTOM=Dole
-OPTION_VALUE_OTHER=Ostatné
-OPTION_VALUE_FILL=Výplň
-OPTION_VALUE_OUTLINE=Obrysy
-
 
 SING_LEGEND_SELECT=Výber
 SING_LEGEND_NAVIGATE=Navigácia
@@ -602,6 +605,7 @@ C_BOTTOM=Spodok
 
 C_CLASSIC=Klasický
 C_CHALLENGE=Výzva
+C_COLOR=Farba
 C_COLOR_BEIGE=Béžová
 C_COLOR_BLACK=Čierna
 C_COLOR_BLUE=Modrá
