--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Fontti
 SING_OPTIONS_LYRICS_EFFECT=Tehoste
 SING_OPTIONS_LYRICS_NOTELINES=Nuottiviivasto
 
+SING_OPTIONS_LYRICS_ALPHA=Läpinäkyvyys
+;TODO: SING_OPTIONS_LYRICS_LINE=Line
+;TODO: SING_OPTIONS_LYRICS_PROPERTY=Property
+;TODO: SING_OPTIONS_LYRICS_POSITION=Position
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Laula
+OPTION_VALUE_TOP=Ylempi
+OPTION_VALUE_BOTTOM=Pohja
+;TODO: OPTION_VALUE_OTHER=Other
+;TODO: OPTION_VALUE_FILL=Fill
+;TODO: OPTION_VALUE_OUTLINE=Outline
+
 OPTION_VALUE_PLAIN=Tyylitelty
 OPTION_VALUE_OLINE1=Ohut reuna
 OPTION_VALUE_OLINE2=Paksu reuna
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Aloituspiste
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Läpinäkyvyys
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Väri
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Punainen
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Vihreä
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Sininen
-
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-
-OPTION_VALUE_TO_SING=Laula
-OPTION_VALUE_TOP=Ylempi
-OPTION_VALUE_BOTTOM=Pohja
-;TODO: OPTION_VALUE_OTHER=Other
-;TODO: OPTION_VALUE_FILL=Fill
-;TODO: OPTION_VALUE_OUTLINE=Outline
-
 
 SING_LEGEND_SELECT=Valitse
 SING_LEGEND_NAVIGATE=Selaa
@@ -602,6 +605,7 @@ C_BACK=Takaisin
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Väri
 C_COLOR_BEIGE=Beige
 C_COLOR_BLACK=Musta
 C_COLOR_BLUE=Sininen
