--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Schriftart
 SING_OPTIONS_LYRICS_EFFECT=Effekt
 SING_OPTIONS_LYRICS_NOTELINES=Notenlinien
 
+SING_OPTIONS_LYRICS_ALPHA=Transparenz
+SING_OPTIONS_LYRICS_LINE=Phrase
+SING_OPTIONS_LYRICS_PROPERTY=Art
+SING_OPTIONS_LYRICS_POSITION=Position
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Singen
+OPTION_VALUE_TOP=Oben
+OPTION_VALUE_BOTTOM=Unten
+OPTION_VALUE_OTHER=Other
+OPTION_VALUE_FILL=Füllung
+OPTION_VALUE_OUTLINE=Umriss
+
 OPTION_VALUE_PLAIN=Stilisiert
 OPTION_VALUE_OLINE1=Mit dünnem Rand
 OPTION_VALUE_OLINE2=Mit dickem Rand
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Kanten
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Weichzeichnen
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Ausgegleichen
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erodieren
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparenz
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Phrase
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Art
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Farbe
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Rot
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Grün
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Blau
-
-JUKEBOX_SONGOPTIONS_LYRIC=Lyricsoptionen
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-
-OPTION_VALUE_TO_SING=Singen
-OPTION_VALUE_TOP=Oben
-OPTION_VALUE_BOTTOM=Unten
-OPTION_VALUE_OTHER=Other
-OPTION_VALUE_FILL=Füllung
-OPTION_VALUE_OUTLINE=Umriss
-
 
 SING_LEGEND_SELECT=Auswählen
 SING_LEGEND_NAVIGATE=Navigieren
@@ -604,6 +607,7 @@ C_BOTTOM=Unten
 
 C_CLASSIC=Klassisch
 C_CHALLENGE=Herausforderung
+C_COLOR=Farbe
 C_COLOR_BEIGE=Beige
 C_COLOR_BLACK=Schwarz
 C_COLOR_BLUE=Blau
