--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Cruth-clò
 SING_OPTIONS_LYRICS_EFFECT=Èifeachd
 SING_OPTIONS_LYRICS_NOTELINES=Clàran
 
+SING_OPTIONS_LYRICS_ALPHA=Follaiseachd
+SING_OPTIONS_LYRICS_LINE=Loidhne
+SING_OPTIONS_LYRICS_PROPERTY=Cruth
+SING_OPTIONS_LYRICS_POSITION=Suidheachadh
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Seinn
+;TODO: OPTION_VALUE_TOP=Top
+;TODO: OPTION_VALUE_BOTTOM=Bottom
+OPTION_VALUE_OTHER=Eile
+OPTION_VALUE_FILL=Lìon
+OPTION_VALUE_OUTLINE=Oir-loidhne
+
 ;TODO: OPTION_VALUE_PLAIN=Stylized
 ;TODO: OPTION_VALUE_OLINE1=With thin edge
 ;TODO: OPTION_VALUE_OLINE2=With thick edge
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Oirean
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Sgleò Gaussach
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Co-chothromaichte
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Bleith
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Follaiseachd
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Loidhne
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Cruth
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Dath
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Dearg
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Uaine
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Gorm
-
-JUKEBOX_SONGOPTIONS_LYRIC=Roghainnean nam faclan
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Suidheachadh
-
-OPTION_VALUE_TO_SING=Seinn
-;TODO: OPTION_VALUE_TOP=Top
-;TODO: OPTION_VALUE_BOTTOM=Bottom
-OPTION_VALUE_OTHER=Eile
-OPTION_VALUE_FILL=Lìon
-OPTION_VALUE_OUTLINE=Oir-loidhne
-
 
 SING_LEGEND_SELECT=Tagh
 SING_LEGEND_NAVIGATE=Seòl
@@ -602,6 +605,7 @@ C_BACK=Air ais
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Dath
 C_COLOR_BEIGE=Bèis
 C_COLOR_BLACK=Dubh
 C_COLOR_BLUE=Gorm
