--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -132,6 +132,27 @@ SING_OPTIONS_LYRICS_FONT=Šriftas
 SING_OPTIONS_LYRICS_EFFECT=Efektas
 SING_OPTIONS_LYRICS_NOTELINES=Poliai
 
+SING_OPTIONS_LYRICS_ALPHA=Skaidrumas
+SING_OPTIONS_LYRICS_LINE=Linija
+SING_OPTIONS_LYRICS_PROPERTY=Nuosavybė
+SING_OPTIONS_LYRICS_POSITION=Pozicija
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+;TODO: OPTION_VALUE_TO_SING=Sing
+OPTION_VALUE_TOP=Viršutinė
+OPTION_VALUE_BOTTOM=Apatinė
+;TODO: OPTION_VALUE_OTHER=Other
+;TODO: OPTION_VALUE_FILL=Fill
+;TODO: OPTION_VALUE_OUTLINE=Outline
 OPTION_VALUE_PLAIN=Stilizuotas
 OPTION_VALUE_OLINE1=Su plonu kraštu
 OPTION_VALUE_OLINE2=Su storu kraštu
@@ -257,25 +278,6 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Slenkstis
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Skaidrumas
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Linija
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Nuosavybė
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Spalva
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Raudona
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Žalias
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Mėlyna
-
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Pozicija
-
-;TODO: OPTION_VALUE_TO_SING=Sing
-OPTION_VALUE_TOP=Viršutinė
-OPTION_VALUE_BOTTOM=Apatinė
-;TODO: OPTION_VALUE_OTHER=Other
-;TODO: OPTION_VALUE_FILL=Fill
-;TODO: OPTION_VALUE_OUTLINE=Outline
-
 
 SING_LEGEND_SELECT=Pasirinkite
 SING_LEGEND_NAVIGATE=Naršyti
@@ -602,6 +604,7 @@ C_BACK=Atgal
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Spalva
 ;TODO: C_COLOR_BEIGE=Beige
 C_COLOR_BLACK=Juodas
 C_COLOR_BLUE=Mėlynas
