--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Betűtípus
 SING_OPTIONS_LYRICS_EFFECT=Effekt
 SING_OPTIONS_LYRICS_NOTELINES=Hangjegyek
 
+SING_OPTIONS_LYRICS_ALPHA=Átlátszóság
+SING_OPTIONS_LYRICS_LINE=Vonal
+SING_OPTIONS_LYRICS_PROPERTY=Sajátosság
+SING_OPTIONS_LYRICS_POSITION=Pozíció
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Énekelt szöveg
+;TODO: OPTION_VALUE_TOP=Top
+;TODO: OPTION_VALUE_BOTTOM=Bottom
+OPTION_VALUE_OTHER=Egyéb
+OPTION_VALUE_FILL=Egyszerű
+OPTION_VALUE_OUTLINE=Körvonal
+
 OPTION_VALUE_PLAIN=Normál
 OPTION_VALUE_OLINE1=Vékony él
 OPTION_VALUE_OLINE2=Vastag él
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Élek
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gauss életlenítés
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Kiegyenlített
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erodált
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Átlátszóság
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Vonal
-JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Sajátosság
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Szín
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Piros
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Zöld
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Kék
-
-JUKEBOX_SONGOPTIONS_LYRIC=Dalszöveg beállítások
-JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Pozíció
-
-OPTION_VALUE_TO_SING=Énekelt szöveg
-;TODO: OPTION_VALUE_TOP=Top
-;TODO: OPTION_VALUE_BOTTOM=Bottom
-OPTION_VALUE_OTHER=Egyéb
-OPTION_VALUE_FILL=Egyszerű
-OPTION_VALUE_OUTLINE=Körvonal
-
 
 SING_LEGEND_SELECT=Választás
 SING_LEGEND_NAVIGATE=Navigálás
@@ -602,6 +605,7 @@ C_BACK=Vissza
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Szín
 C_COLOR_BEIGE=Bézs
 C_COLOR_BLACK=Fekete
 C_COLOR_BLUE=Kék
