--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Lettertype
 SING_OPTIONS_LYRICS_EFFECT=Effecten
 SING_OPTIONS_LYRICS_NOTELINES=Staafjes
 
+SING_OPTIONS_LYRICS_ALPHA=Transparantie
+;TODO: SING_OPTIONS_LYRICS_LINE=Line
+;TODO: SING_OPTIONS_LYRICS_PROPERTY=Property
+;TODO: SING_OPTIONS_LYRICS_POSITION=Position
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Zing
+OPTION_VALUE_TOP=Bovenste
+OPTION_VALUE_BOTTOM=Bodem
+;TODO: OPTION_VALUE_OTHER=Other
+;TODO: OPTION_VALUE_FILL=Fill
+;TODO: OPTION_VALUE_OUTLINE=Outline
+
 OPTION_VALUE_PLAIN=Gestileerde
 OPTION_VALUE_OLINE1=Met dunne rand
 OPTION_VALUE_OLINE2=Met dikke rand
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Randen
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparantie
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Kleur
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Red
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Green
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Blue
-
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-
-OPTION_VALUE_TO_SING=Zing
-OPTION_VALUE_TOP=Bovenste
-OPTION_VALUE_BOTTOM=Bodem
-;TODO: OPTION_VALUE_OTHER=Other
-;TODO: OPTION_VALUE_FILL=Fill
-;TODO: OPTION_VALUE_OUTLINE=Outline
-
 
 SING_LEGEND_SELECT=Selecteer
 SING_LEGEND_NAVIGATE=Navigeer
@@ -602,6 +605,7 @@ C_BACK=Terug
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Kleur
 C_COLOR_BEIGE=Beige
 C_COLOR_BLACK=Zwart
 C_COLOR_BLUE=Blauw
