--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Шрифт
 SING_OPTIONS_LYRICS_EFFECT=Эффект
 SING_OPTIONS_LYRICS_NOTELINES=Линии стана
 
+SING_OPTIONS_LYRICS_ALPHA=прозрачность
+;TODO: SING_OPTIONS_LYRICS_LINE=Line
+;TODO: SING_OPTIONS_LYRICS_PROPERTY=Property
+;TODO: SING_OPTIONS_LYRICS_POSITION=Position
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Пение
+OPTION_VALUE_TOP=верхний
+OPTION_VALUE_BOTTOM=Дно
+OPTION_VALUE_OTHER=Другие
+;TODO: OPTION_VALUE_FILL=Fill
+;TODO: OPTION_VALUE_OUTLINE=Outline
+
 OPTION_VALUE_PLAIN=стилизованный
 OPTION_VALUE_OLINE1=с тонким краем
 OPTION_VALUE_OLINE2=с толстым краем
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Погрешность
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=прозрачность
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Цвет
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Красный
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Зелёный
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Синий
-
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-
-OPTION_VALUE_TO_SING=Пение
-OPTION_VALUE_TOP=верхний
-OPTION_VALUE_BOTTOM=Дно
-OPTION_VALUE_OTHER=Другие
-;TODO: OPTION_VALUE_FILL=Fill
-;TODO: OPTION_VALUE_OUTLINE=Outline
-
 
 SING_LEGEND_SELECT=выбрать
 SING_LEGEND_NAVIGATE=перейти
@@ -602,6 +605,7 @@ C_BACK=назад
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Цвет
 ;TODO: C_COLOR_BEIGE=Бежевый
 ;TODO: C_COLOR_BLACK=Чёрный
 ;TODO: C_COLOR_BLUE=Синий
