--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Pisava
 SING_OPTIONS_LYRICS_EFFECT=Ucinek
 SING_OPTIONS_LYRICS_NOTELINES=Notno crtovje
 
+SING_OPTIONS_LYRICS_ALPHA=Preglednost
+;TODO: SING_OPTIONS_LYRICS_LINE=Line
+;TODO: SING_OPTIONS_LYRICS_PROPERTY=Property
+;TODO: SING_OPTIONS_LYRICS_POSITION=Position
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Poj
+OPTION_VALUE_TOP=Zgornja
+OPTION_VALUE_BOTTOM=Spodnja
+;TODO: OPTION_VALUE_OTHER=Other
+;TODO: OPTION_VALUE_FILL=Fill
+;TODO: OPTION_VALUE_OUTLINE=Outline
+
 OPTION_VALUE_PLAIN=Stilizirano
 OPTION_VALUE_OLINE1=S tankim robom
 OPTION_VALUE_OLINE2=Z debelim robom
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Prag
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Preglednost
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Barva
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Rdeča
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Zelena
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Modra
-
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-
-OPTION_VALUE_TO_SING=Poj
-OPTION_VALUE_TOP=Zgornja
-OPTION_VALUE_BOTTOM=Spodnja
-;TODO: OPTION_VALUE_OTHER=Other
-;TODO: OPTION_VALUE_FILL=Fill
-;TODO: OPTION_VALUE_OUTLINE=Outline
-
 
 SING_LEGEND_SELECT=Izberi
 SING_LEGEND_NAVIGATE=Premik
@@ -602,6 +605,7 @@ C_BACK=Nazaj
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Barva
 ;TODO: C_COLOR_BEIGE=Beige
 C_COLOR_BLACK=Črna
 C_COLOR_BLUE=Modra
