--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Typsnitt
 SING_OPTIONS_LYRICS_EFFECT=Effekt
 SING_OPTIONS_LYRICS_NOTELINES=Notlinjer
 
+SING_OPTIONS_LYRICS_ALPHA=Genomskinlighet
+SING_OPTIONS_LYRICS_LINE=Linje
+;TODO: SING_OPTIONS_LYRICS_PROPERTY=Property
+;TODO: SING_OPTIONS_LYRICS_POSITION=Position
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Sjung
+OPTION_VALUE_TOP=Övre
+OPTION_VALUE_BOTTOM=Botten
+;TODO: OPTION_VALUE_OTHER=Other
+;TODO: OPTION_VALUE_FILL=Fill
+;TODO: OPTION_VALUE_OUTLINE=Outline
+
 OPTION_VALUE_PLAIN=Stiliserade
 OPTION_VALUE_OLINE1=Med tunn kant
 OPTION_VALUE_OLINE2=Med tjock kant
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Ljudtröskel
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Genomskinlighet
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Linje
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Färg
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Röd
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Grön
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Blå
-
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-
-OPTION_VALUE_TO_SING=Sjung
-OPTION_VALUE_TOP=Övre
-OPTION_VALUE_BOTTOM=Botten
-;TODO: OPTION_VALUE_OTHER=Other
-;TODO: OPTION_VALUE_FILL=Fill
-;TODO: OPTION_VALUE_OUTLINE=Outline
-
 
 SING_LEGEND_SELECT=Välj
 SING_LEGEND_NAVIGATE=Navigera
@@ -602,6 +605,7 @@ C_BACK=Tillbaka
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Färg
 C_COLOR_BEIGE=Beige
 C_COLOR_BLACK=Svart
 C_COLOR_BLUE=Blå
