--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Γραμματοσειρά
 SING_OPTIONS_LYRICS_EFFECT=Εφέ
 SING_OPTIONS_LYRICS_NOTELINES=Πεντάγραμμο
 
+SING_OPTIONS_LYRICS_ALPHA=Διαφάνεια
+SING_OPTIONS_LYRICS_LINE=Γραμμή
+;TODO: SING_OPTIONS_LYRICS_PROPERTY=Property
+;TODO: SING_OPTIONS_LYRICS_POSITION=Position
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=Τραγουδήστε
+OPTION_VALUE_TOP=Άνω
+OPTION_VALUE_BOTTOM=Κάτω μέρος
+;TODO: OPTION_VALUE_OTHER=Other
+;TODO: OPTION_VALUE_FILL=Fill
+;TODO: OPTION_VALUE_OUTLINE=Outline
+
 OPTION_VALUE_PLAIN=Στυλιζαρισμένο
 OPTION_VALUE_OLINE1=Με λεπτή άκρη
 OPTION_VALUE_OLINE2=Με παχιά άκρη
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Ευαισθησία μικροφώνου
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Διαφάνεια
-JUKEBOX_SONGOPTIONS_LYRIC_LINE=Γραμμή
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Χρώμα
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=κόκκινο
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Πράσινος
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Μπλε
-
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-
-OPTION_VALUE_TO_SING=Τραγουδήστε
-OPTION_VALUE_TOP=Άνω
-OPTION_VALUE_BOTTOM=Κάτω μέρος
-;TODO: OPTION_VALUE_OTHER=Other
-;TODO: OPTION_VALUE_FILL=Fill
-;TODO: OPTION_VALUE_OUTLINE=Outline
-
 
 SING_LEGEND_SELECT=Επέλεξε
 SING_LEGEND_NAVIGATE=Εξερέυνηση
@@ -602,6 +605,7 @@ C_BACK=Πίσω
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Χρώμα
 C_COLOR_BEIGE=Μπεζ
 C_COLOR_BLACK=Μαύρος
 C_COLOR_BLUE=Μπλε
