--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -132,6 +132,28 @@ SING_OPTIONS_LYRICS_FONT=Font
 SING_OPTIONS_LYRICS_EFFECT=Efekti
 ;TODO: SING_OPTIONS_LYRICS_NOTELINES=Staves
 
+SING_OPTIONS_LYRICS_ALPHA=Транспарентност
+;TODO: SING_OPTIONS_LYRICS_LINE=Line
+;TODO: SING_OPTIONS_LYRICS_PROPERTY=Property
+;TODO: SING_OPTIONS_LYRICS_POSITION=Position
+
+;TODO: SING_OPTIONS_LYRICS_MODE_DESC=Toggle between classical or jukebox to customize song lyrics
+;TODO: SING_OPTIONS_LYRICS_STAVES_DESC=Show horizonal lines in sing screen
+;TODO: SING_OPTIONS_LYRICS_POSITION_DESC=Move up or down the position of the lyrics
+;TODO: SING_OPTIONS_LYRICS_FONT_DESC=Sets font thickness
+;TODO: SING_OPTIONS_LYRICS_EFFECT_DESC=Choose the movement of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_TRANSPARENCY_DESC=Sets opacity of the song lyrics
+;TODO: SING_OPTIONS_LYRICS_LINE_DESC=Choose a line to apply the color
+;TODO: SING_OPTIONS_LYRICS_PROPERTY_DESC=Choose the part of the letter you want to customize
+;TODO: SING_OPTIONS_LYRICS_COLOR_DESC=Change the color of song lyrics
+
+OPTION_VALUE_TO_SING=pevaj
+OPTION_VALUE_TOP=горњи
+OPTION_VALUE_BOTTOM=Дно
+;TODO: OPTION_VALUE_OTHER=Other
+;TODO: OPTION_VALUE_FILL=Fill
+;TODO: OPTION_VALUE_OUTLINE=Outline
+
 OPTION_VALUE_PLAIN=Стилизед
 OPTION_VALUE_OLINE1=Са танким рубом
 OPTION_VALUE_OLINE2=Са дебелом ивицом
@@ -257,25 +279,6 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Stepen Cujnosti
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
-
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Транспарентност
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
-JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Boja
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Црвена
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Зелен
-JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Плави
-
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-
-OPTION_VALUE_TO_SING=pevaj
-OPTION_VALUE_TOP=горњи
-OPTION_VALUE_BOTTOM=Дно
-;TODO: OPTION_VALUE_OTHER=Other
-;TODO: OPTION_VALUE_FILL=Fill
-;TODO: OPTION_VALUE_OUTLINE=Outline
-
 
 SING_LEGEND_SELECT=Izaberi
 SING_LEGEND_NAVIGATE=Biraj
@@ -602,6 +605,7 @@ C_BACK=Nazad
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
+C_COLOR=Boja
 C_COLOR_BEIGE=Беж
 C_COLOR_BLACK=Црн
 C_COLOR_BLUE=Плави
