extended themes to themes options

--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Teema
 SING_OPTIONS_THEMES_SKIN=Taust
 SING_OPTIONS_THEMES_COLOR=Värv
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Muusikakaart
 SING_OPTIONS_MICROPHONES_INPUT=Sisend
 SING_OPTIONS_MICROPHONES_CHANNEL=Kanal
