--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Tema
 SING_OPTIONS_THEMES_SKIN=Piel
 SING_OPTIONS_THEMES_COLOR=Color
 
+SING_OPTIONS_THEMES_THEME_DESC=Los temas cambian el aspecto de los iconos y la distribución de los elementos
+SING_OPTIONS_THEMES_SKIN_DESC=Selecciona un fondo de pantalla
+SING_OPTIONS_THEMES_COLOR_DESC=Cambia el color de los elementos
+
 SING_OPTIONS_MICROPHONES_CARD=Dispositivo de sonido
 SING_OPTIONS_MICROPHONES_INPUT=Entrada
 SING_OPTIONS_MICROPHONES_CHANNEL=Canal
