--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -153,6 +153,7 @@ OPTION_VALUE_BOTTOM=Apatinė
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
+
 OPTION_VALUE_PLAIN=Stilizuotas
 OPTION_VALUE_OLINE1=Su plonu kraštu
 OPTION_VALUE_OLINE2=Su storu kraštu
@@ -166,6 +167,10 @@ OPTION_VALUE_SHIFT=Perkelti
 SING_OPTIONS_THEMES_THEME=Tema
 SING_OPTIONS_THEMES_SKIN=Odos
 SING_OPTIONS_THEMES_COLOR=Spalva
+
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
 
 SING_OPTIONS_MICROPHONES_CARD=Garso plokštė
 SING_OPTIONS_MICROPHONES_INPUT=Įvestis
