--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Þema
 SING_OPTIONS_THEMES_SKIN=Skinn
 SING_OPTIONS_THEMES_COLOR=Litur
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Hljóðkort
 SING_OPTIONS_MICROPHONES_INPUT=Inntak
 SING_OPTIONS_MICROPHONES_CHANNEL=Rás
