--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Θέμα
 SING_OPTIONS_THEMES_SKIN=Μορφή θέματος
 SING_OPTIONS_THEMES_COLOR=Χρώμα
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Κάρτα ήχου
 SING_OPTIONS_MICROPHONES_INPUT=Επιλογή μικροφώνου
 SING_OPTIONS_MICROPHONES_CHANNEL=Κανάλι
