--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=テーマ
 SING_OPTIONS_THEMES_SKIN=スキン
 SING_OPTIONS_THEMES_COLOR=色
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=サウンドカード
 SING_OPTIONS_MICROPHONES_INPUT=入力
 SING_OPTIONS_MICROPHONES_CHANNEL=チャネル
