--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=主题
 SING_OPTIONS_THEMES_SKIN=皮肤
 SING_OPTIONS_THEMES_COLOR=颜色
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=声卡
 SING_OPTIONS_MICROPHONES_INPUT=输入
 SING_OPTIONS_MICROPHONES_CHANNEL=频道
