--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Aparença
 SING_OPTIONS_THEMES_SKIN=Pell
 SING_OPTIONS_THEMES_COLOR=Color
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Tarjeta de so
 SING_OPTIONS_MICROPHONES_INPUT=Entrada
 SING_OPTIONS_MICROPHONES_CHANNEL=Canal
