--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Design
 SING_OPTIONS_THEMES_SKIN=Skin
 SING_OPTIONS_THEMES_COLOR=Farbe
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Soundkarte
 SING_OPTIONS_MICROPHONES_INPUT=Eingang
 SING_OPTIONS_MICROPHONES_CHANNEL=Kanal
