--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Theme
 SING_OPTIONS_THEMES_SKIN=Skin
 SING_OPTIONS_THEMES_COLOR=Color
 
+SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Soundcard
 SING_OPTIONS_MICROPHONES_INPUT=Input
 SING_OPTIONS_MICROPHONES_CHANNEL=Channel
