--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Gaia
 SING_OPTIONS_THEMES_SKIN=Azala
 SING_OPTIONS_THEMES_COLOR=Kolorea
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Soinu-txartela
 SING_OPTIONS_MICROPHONES_INPUT=Sarrera
 SING_OPTIONS_MICROPHONES_CHANNEL=Kanala
