--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Thèmes
 SING_OPTIONS_THEMES_SKIN=Aspect
 SING_OPTIONS_THEMES_COLOR=Couleur
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Carte son
 SING_OPTIONS_MICROPHONES_INPUT=Entrée
 SING_OPTIONS_MICROPHONES_CHANNEL=Canal
