--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Temi
 SING_OPTIONS_THEMES_SKIN=Skin
 SING_OPTIONS_THEMES_COLOR=Colori
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Scheda Audio
 SING_OPTIONS_MICROPHONES_INPUT=Input
 SING_OPTIONS_MICROPHONES_CHANNEL=Canale
