--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Téma
 SING_OPTIONS_THEMES_SKIN=Háttér
 SING_OPTIONS_THEMES_COLOR=Szín
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Hangkártya
 SING_OPTIONS_MICROPHONES_INPUT=Bemenet
 SING_OPTIONS_MICROPHONES_CHANNEL=Csatorna
