--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Styl
 SING_OPTIONS_THEMES_SKIN=Skórka
 SING_OPTIONS_THEMES_COLOR=Kolor
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Karta muzyczna
 SING_OPTIONS_MICROPHONES_INPUT=Wejście
 SING_OPTIONS_MICROPHONES_CHANNEL=Kanał
