--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Tema
 SING_OPTIONS_THEMES_SKIN=Skin
 SING_OPTIONS_THEMES_COLOR=Cor
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Placa de Som
 SING_OPTIONS_MICROPHONES_INPUT=Entrada
 SING_OPTIONS_MICROPHONES_CHANNEL=Canal
