--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Тема
 SING_OPTIONS_THEMES_SKIN=Скин
 SING_OPTIONS_THEMES_COLOR=Цвет
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Звуковая карта
 SING_OPTIONS_MICROPHONES_INPUT=Вход
 SING_OPTIONS_MICROPHONES_CHANNEL=Канал
