--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Temă
 SING_OPTIONS_THEMES_SKIN=Skin
 SING_OPTIONS_THEMES_COLOR=Culoare
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Placă de sunet
 SING_OPTIONS_MICROPHONES_INPUT=Intrare
 SING_OPTIONS_MICROPHONES_CHANNEL=Canal
