--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Tema
 SING_OPTIONS_THEMES_SKIN=Izgled
 SING_OPTIONS_THEMES_COLOR=Barva
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Vir zvoka
 SING_OPTIONS_MICROPHONES_INPUT=Vhod
 SING_OPTIONS_MICROPHONES_CHANNEL=Kanal
