--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Teema
 SING_OPTIONS_THEMES_SKIN=Tyyli
 SING_OPTIONS_THEMES_COLOR=Väri
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Äänikortti
 SING_OPTIONS_MICROPHONES_INPUT=Tulo
 SING_OPTIONS_MICROPHONES_CHANNEL=Kanava
