--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -168,6 +168,10 @@ SING_OPTIONS_THEMES_THEME=Tema
 SING_OPTIONS_THEMES_SKIN=Utseende
 SING_OPTIONS_THEMES_COLOR=Färg
 
+;TODO: SING_OPTIONS_THEMES_THEME_DESC=The themes change the aspect of icons and dristibution of items
+;TODO: SING_OPTIONS_THEMES_SKIN_DESC=Select a wallpaper
+;TODO: SING_OPTIONS_THEMES_COLOR_DESC=Change the color of the items
+
 SING_OPTIONS_MICROPHONES_CARD=Ljudkort
 SING_OPTIONS_MICROPHONES_INPUT=Ingång
 SING_OPTIONS_MICROPHONES_CHANNEL=Kanal
